--- a/appspec.yml
+++ b/appspec.yml
@@ -4,7 +4,19 @@ files:
   - source: /
     destination: /var/www/html
 hooks:
+  BeforeInstall:
+    - location: scripts/clear_old_files.sh
+      timeout: 300
+      runas: root
   AfterInstall:
-    - location: script/restart_nginx.sh
+    - location: scripts/configure_server.sh
+      timeout: 300
+      runas: root
+  ApplicationStart:
+    - location: scripts/start_server.sh
+      timeout: 300
+      runas: root
+  ValidateService:
+    - location: scripts/validate_service.sh
       timeout: 300
       runas: root
