--- a/appspec.yml
+++ b/appspec.yml
@@ -5,18 +5,18 @@ files:
     destination: /var/www/html
 hooks:
   BeforeInstall:
-    - location: scripts/clear_old_files.sh
+    - location: script/clear_old_files.sh
       timeout: 300
       runas: root
   AfterInstall:
-    - location: scripts/configure_server.sh
+    - location: script/configure_server.sh
       timeout: 300
       runas: root
   ApplicationStart:
-    - location: scripts/start_server.sh
+    - location: script/start_server.sh
       timeout: 300
       runas: root
   ValidateService:
-    - location: scripts/validate_service.sh
+    - location: script/validate_service.sh
       timeout: 300
       runas: root
